Правки размеров под PP, начало перевёрстки хэдера

--- a/source/index.html
+++ b/source/index.html
@@ -14,13 +14,13 @@
 
     <div class="wrapper">
       <header class="page-header">
-        <div class="page-header__left-part">
+        <div class="page-header__wrapper page-header__wrapper--left">
           <a class="page-header__logo logo" href="">
             <svg class="logo__svg" width="120" height="27">
               <use xlink:href="#icon-logo"></use>
             </svg>
           </a>
-          <svg class="logo__text" width="79" height="23">
+          <svg class="logo__text" width="80" height="24">
             <use xlink:href="#icon-logo-text"></use>
           </svg>
           <div class="page-header__theme-toggle theme-toggle">
@@ -80,11 +80,7 @@
               <use xlink:href="#icon-dragon"></use>
             </svg>
 
-            <h1 class="block-title__title">
-              <span>Лига А.</span>
-              <span>фронтенд</span>
-              <span>аутсорс</span>
-            </h1>
+            <h1 class="block-title__title">Лига А.<br><span>фронтенд<br> аутсорс</span></h1>
             <ul class="block-title__promo list">
               <li class="block-title__promo-item">
                 <p class="block-title__promo-text"><span>297</span> успешных проектов</p>
@@ -111,6 +107,7 @@
             <li class="advantages__item">
               <span>004</span>
               <p class="advantages__text">Ценим ваши данные, работаем по договору и NDA</p>
+              <!-- <p class="advantages__text">Гибкость и честность —<br /> наше кредо</p> -->
             </li>
             <li class="advantages__item">
               <span>005</span>
