Мобильное разрешение перевёрстка

--- a/source/index.html
+++ b/source/index.html
@@ -47,7 +47,7 @@
             <span>+11°C</span>, небольшой дождь
           </div>
         </div>
-        <div class="page-header__nav-wrapper">
+        <div class="page-header__wrapper page-header__wrapper--right">
           <ul class="main-nav list">
             <li class="main-nav__item">
               <a href="" class="main-nav__link main-nav__link--active link">Верстка</a>
@@ -65,10 +65,9 @@
               <a href="" class="main-nav__link link">Команда</a>
             </li>
           </ul>
-        </div>
-        <div class="page-header__button-wrapper">
           <a class="page-header__button link button button--blue" href="#">Работать с нами</a>
         </div>
+
         <button class="page-header__burger burger button" type="button">
           <span></span>
         </button>
