Не работает active на ссылках главного меню

--- a/source/index.html
+++ b/source/index.html
@@ -50,7 +50,7 @@
         <div class="page-header__wrapper page-header__wrapper--right">
           <ul class="main-nav list">
             <li class="main-nav__item">
-              <a href="" class="main-nav__link main-nav__link--active link">Верстка</a>
+              <a href="" class="main-nav__link main-nav__link--clicked link">Верстка</a>
             </li>
             <li class="main-nav__item">
               <a href="" class="main-nav__link link">Контакты </a>
