Мелкие правки переключателя темы сайта

--- a/source/index.html
+++ b/source/index.html
@@ -141,3 +141,7 @@
     <script src="js/script.min.js"></script>
   </body>
 </html>
+
+<!-- Доступность переключателя тем -->
+<!-- Баги SVG в хроме и IE -->
+<!-- Генерация спрайта -->
