--- a/source/index.html
+++ b/source/index.html
@@ -19,28 +19,28 @@
         <div class="page-header__wrapper page-header__wrapper--left">
           <a class="page-header__logo logo" href="" aria-label="Логотип Академии. Вернуться на главную страницу">
             <svg class="logo__svg" width="120" height="27">
-              <use xlink:href="#icon-logo"></use>
+              <use xlink:href="#logo"></use>
             </svg>
           </a>
           <svg class="logo__text" width="80" height="24">
-            <use xlink:href="#icon-logo-text"></use>
+            <use xlink:href="#logo-text"></use>
           </svg>
           <div class="page-header__theme-toggle theme-toggle">
             <input class="theme-toggle__input visually-hidden" type="checkbox" id="theme-toggle" />
             <label class="theme-toggle__label" for="theme-toggle">
               <span class="theme-toggle__svg-wrapper">
                 <svg class="theme-toggle__svg theme-toggle__svg--rays" width="11" height="11">
-                  <use xlink:href="#icon-rays"></use>
+                  <use xlink:href="#rays"></use>
                 </svg>
 
                 <svg class="theme-toggle__svg theme-toggle__svg--sun" width="11" height="11">
-                  <use xlink:href="#icon-sun"></use>
+                  <use xlink:href="#sun"></use>
                 </svg>
               </span>
 
               <span class="theme-toggle__svg-wrapper">
                 <svg class="theme-toggle__svg theme-toggle__svg--moon" viewBox="0 0 11 11" width="11" height="11">
-                  <use xlink:href="#icon-moon"></use>
+                  <use xlink:href="#moon"></use>
                 </svg>
               </span>
             </label>
@@ -78,7 +78,7 @@
         <section class="about-us">
           <section class="block-title">
             <svg class="block-title__image" width="190" height="215">
-              <use xlink:href="#icon-dragon"></use>
+              <use xlink:href="#dragon"></use>
             </svg>
 
             <h1 class="block-title__title">Лига А.<br><span>фронтенд<br> аутсорс</span></h1>
@@ -118,17 +118,17 @@
               <div class="advantages__links-wrapper">
                 <a class="advantages__link link" href="" aria-label="">
                   <svg width="39" height="40">
-                    <use xlink:href="#icon-lighthouse"></use>
+                    <use xlink:href="#lighthouse"></use>
                   </svg>
                 </a>
                 <a class="advantages__link link" href="" aria-label="">
                   <svg width="42" height="42">
-                    <use xlink:href="#icon-roll"></use>
+                    <use xlink:href="#roll"></use>
                   </svg>
                 </a>
                 <a class="advantages__link link" href="" aria-label="">
                   <svg width="46" height="40">
-                    <use xlink:href="#icon-speedometer"></use>
+                    <use xlink:href="#speedometer"></use>
                   </svg>
                 </a>
               </div>
