Правки генерации спрайта, JS, минификация html

--- a/source/index.html
+++ b/source/index.html
@@ -30,7 +30,7 @@
             <label class="theme-toggle__label" for="theme-toggle">
               <span class="theme-toggle__svg-wrapper">
                 <svg class="theme-toggle__svg theme-toggle__svg--rays" width="11" height="11">
-                  <use xlink:href="#rays"></use>
+                  <use xlink:href="#sun-rays"></use>
                 </svg>
 
                 <svg class="theme-toggle__svg theme-toggle__svg--sun" width="11" height="11">
@@ -141,7 +141,3 @@
     <script src="js/script.min.js"></script>
   </body>
 </html>
-
-<!-- Доступность переключателя тем -->
-<!-- Баги SVG в хроме и IE -->
-<!-- Генерация спрайта -->
