Унификация кавычек, удаление about-us, рефакторинг html

--- a/source/index.html
+++ b/source/index.html
@@ -76,23 +76,24 @@
       </header>
       <main class="page-content">
         <section class="about-us">
-          <section class="block-title">
-            <svg class="block-title__image" width="190" height="215">
-              <use xlink:href="#dragon"></use>
-            </svg>
+          <svg class="about-us__image" width="190" height="215">
+            <use xlink:href="#dragon"></use>
+          </svg>
 
-            <h1 class="block-title__title">Лига А.<br><span>фронтенд<br> аутсорс</span></h1>
-            <ul class="block-title__promo list">
-              <li class="block-title__promo-item">
-                <p class="block-title__promo-text"><span>297</span> успешных проектов</p>
-              </li>
-              <li class="block-title__promo-item">
-                <p class="block-title__promo-text"><span>2 дня</span> на запуск?<br> это про нас</p>
-              </li>
-            </ul>
-          </section>
+          <h1 class="about-us__title">Лига А.<br><span>фронтенд<br> аутсорс</span></h1>
+          <ul class="about-us__promo list">
+            <li class="about-us__promo-item">
+              <p class="about-us__promo-text"><span>297</span> успешных проектов</p>
+            </li>
+            <li class="about-us__promo-item">
+              <p class="about-us__promo-text"><span>2 дня</span> на запуск?<br> это про нас</p>
+            </li>
+          </ul>
+        </section>
 
-          <ul class="advantages list">
+        <section class="advantages">
+          <h2 class="advantages__title visually-hidden">Наши преимущества</h2>
+          <ul class="advantages__list list">
             <li class="advantages__item">
               <span>01</span>
               <p class="advantages__text">Даём экспертизу и топим<br /> за качество</p>
