Правки имени классов, дописал значения aria-label, убрал забытый комментарий

--- a/source/index.html
+++ b/source/index.html
@@ -22,7 +22,7 @@
               <use xlink:href="#logo"></use>
             </svg>
           </a>
-          <svg class="logo__text" width="80" height="24">
+          <svg class="page-header__logo-text" width="80" height="24">
             <use xlink:href="#logo-text"></use>
           </svg>
           <div class="page-header__theme-toggle theme-toggle">
@@ -109,7 +109,6 @@
             <li class="advantages__item">
               <span>004</span>
               <p class="advantages__text">Ценим ваши данные, работаем по договору и NDA</p>
-              <!-- <p class="advantages__text">Гибкость и честность —<br /> наше кредо</p> -->
             </li>
             <li class="advantages__item">
               <span>005</span>
@@ -117,17 +116,17 @@
             </li>
             <li class="advantages__item advantages__item--test">
               <div class="advantages__links-wrapper">
-                <a class="advantages__link link" href="" aria-label="">
+                <a class="advantages__link link" href="" aria-label="Перейти перейти на страницу">
                   <svg width="39" height="40">
                     <use xlink:href="#lighthouse"></use>
                   </svg>
                 </a>
-                <a class="advantages__link link" href="" aria-label="">
+                <a class="advantages__link link" href="" aria-label="Перейти на страницу">
                   <svg width="42" height="42">
                     <use xlink:href="#roll"></use>
                   </svg>
                 </a>
-                <a class="advantages__link link" href="" aria-label="">
+                <a class="advantages__link link" href="" aria-label="Перейти на страницу">
                   <svg width="46" height="40">
                     <use xlink:href="#speedometer"></use>
                   </svg>
